--- a/Frontend/Ind_register.html
+++ b/Frontend/Ind_register.html
@@ -270,6 +270,7 @@
 
             const form = event.target;
             const formData = new FormData(form);
+            console.log(formData);
 
             const homeAddress = {
                 address_line_1: formData.get('address_line_1'),
@@ -290,16 +291,10 @@
                 console.log(formData);
                 const response = await fetch('http://localhost:3000/volunteer/create', {
                     method: 'POST',
-                    // headers: {
-                    //     'Content-Type': 'application/json'
-                    // },
                     body: formData
                 });
                 
                 console.log(response);
-
-                // const result = await response.json();
-                // console.log(result);
 
                 if (response.status == 201) {
                     alert("Registration successful");
