--- a/Frontend/Ind_register.html
+++ b/Frontend/Ind_register.html
@@ -288,11 +288,8 @@
 
             try {
                 console.log(formData);
-                const response = await fetch('http://localhost:3000/volunteer/create', {
+                const response = await fetch('http://127.0.0.1/volunteer/create', {
                     method: 'POST',
-                    // headers: {
-                    //     'Content-Type': 'application/json'
-                    // },
                     body: formData
                 });
                 
