--- a/Frontend/restaurant_register.html
+++ b/Frontend/restaurant_register.html
@@ -135,11 +135,13 @@
                                     <div class="form-row">
                                         <div class="col">
                                             <input type="number" class="form-control" style="border-radius: 5px;"
-                                                id="latitude" name="latitude" placeholder="Latitude" step="any" required>
+                                                id="latitude" name="latitude" placeholder="Latitude" step="any"
+                                                required>
                                         </div>
                                         <div class="col">
                                             <input type="number" class="form-control" style="border-radius: 5px;"
-                                                id="longitude" name="longitude" placeholder="Longitude" step="any" required>
+                                                id="longitude" name="longitude" placeholder="Longitude" step="any"
+                                                required>
                                         </div>
                                     </div>
                                 </div>
@@ -153,9 +155,49 @@
                             </div>
                             <div class="form-group">
                                 <label for="state">State</label>
-                                <input type="text" class="form-control" style="border-radius: 5px;" id="state"
-                                    name="state" placeholder="Enter State" required>
+                                <select class="form-control" style="border-radius: 5px;" id="state" name="state"
+                                    required>
+                                    <option value="" disabled selected>Select State</option>
+                                    <option value="Andhra Pradesh">Andhra Pradesh</option>
+                                    <option value="Arunachal Pradesh">Arunachal Pradesh</option>
+                                    <option value="Assam">Assam</option>
+                                    <option value="Bihar">Bihar</option>
+                                    <option value="Chhattisgarh">Chhattisgarh</option>
+                                    <option value="Goa">Goa</option>
+                                    <option value="Gujarat">Gujarat</option>
+                                    <option value="Haryana">Haryana</option>
+                                    <option value="Himachal Pradesh">Himachal Pradesh</option>
+                                    <option value="Jharkhand">Jharkhand</option>
+                                    <option value="Karnataka">Karnataka</option>
+                                    <option value="Kerala">Kerala</option>
+                                    <option value="Madhya Pradesh">Madhya Pradesh</option>
+                                    <option value="Maharashtra">Maharashtra</option>
+                                    <option value="Manipur">Manipur</option>
+                                    <option value="Meghalaya">Meghalaya</option>
+                                    <option value="Mizoram">Mizoram</option>
+                                    <option value="Nagaland">Nagaland</option>
+                                    <option value="Odisha">Odisha</option>
+                                    <option value="Punjab">Punjab</option>
+                                    <option value="Rajasthan">Rajasthan</option>
+                                    <option value="Sikkim">Sikkim</option>
+                                    <option value="Tamil Nadu">Tamil Nadu</option>
+                                    <option value="Telangana">Telangana</option>
+                                    <option value="Tripura">Tripura</option>
+                                    <option value="Uttar Pradesh">Uttar Pradesh</option>
+                                    <option value="Uttarakhand">Uttarakhand</option>
+                                    <option value="West Bengal">West Bengal</option>
+                                    <option value="Andaman and Nicobar Islands">Andaman and Nicobar Islands</option>
+                                    <option value="Chandigarh">Chandigarh</option>
+                                    <option value="Dadra and Nagar Haveli and Daman and Diu">Dadra and Nagar Haveli and
+                                        Daman and Diu</option>
+                                    <option value="Lakshadweep">Lakshadweep</option>
+                                    <option value="Delhi">Delhi</option>
+                                    <option value="Puducherry">Puducherry</option>
+                                    <option value="Ladakh">Ladakh</option>
+                                    <option value="Jammu and Kashmir">Jammu and Kashmir</option>
+                                </select>
                             </div>
+
                             <div class="form-group">
                                 <label for="zip_code">Zip Code</label>
                                 <input type="text" class="form-control" style="border-radius: 5px;" id="zip_code"
@@ -168,8 +210,9 @@
                             </div>
                             <div class="form-group">
                                 <label for="food_handlers_permit">Food Handler's Permit</label>
-                                <input type="file" class="form-control" style="border-radius: 5px; padding-top: 0.75rem;" 
-                                id="food_handlers_permit" name="food_handlers_permit" accept="application/pdf" required>
+                                <input type="file" class="form-control"
+                                    style="border-radius: 5px; padding-top: 0.75rem;" id="food_handlers_permit"
+                                    name="food_handlers_permit" accept="application/pdf" required>
                             </div>
                             <div class="form-group text-center">
                                 <button type="submit" class="btn btn-success btn-lg"
