--- a/Frontend/admin_ngo.html
+++ b/Frontend/admin_ngo.html
@@ -23,7 +23,6 @@
     <link rel="stylesheet" href="css/bootstrap-datepicker.css">
     <link rel="stylesheet" href="css/jquery.timepicker.css">
 
-
     <link rel="stylesheet" href="css/flaticon.css">
     <link rel="stylesheet" href="css/icomoon.css">
     <link rel="stylesheet" href="css/style.css">
@@ -76,12 +75,9 @@
 
             <div class="collapse navbar-collapse" id="ftco-nav">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-                    <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-                    <li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
-                    <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
-                    <li class="nav-item"><a href="restaurant_main_2.html" class="nav-link">NGO</a></li>
-                    <li class="nav-item"><a href="Login.html" class="nav-link">SignIn</a></li>
+                    <li class="nav-item"><a href="admin_Ind.html" class="nav-link">Volunteer</a></li>
+                    <li class="nav-item"><a href="admin_ngo.html" class="nav-link">NGO</a></li>
+                    <li class="nav-item"><a href="admin_restaurant.html" class="nav-link">Restaurant</a></li>
                 </ul>
             </div>
         </div>
@@ -89,56 +85,33 @@
     <!-- END nav -->
 
     <div class="container" style="margin-top: 6rem">
-        <!-- Donation Request Card 1 -->
-        <div class="container mt-5">
+        <!-- Organization Verification Card -->
+        <div class="container mt-2">
             <div class="row">
                 <div class="col-md-12">
                     <div class="card mb-4">
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-md-6">
-                                    <h5 class="card-title">Food: Daal</h5>
-                                    <p class="card-text">Quantity: 50 servings</p>
-                                    <p class="card-text">Category: Veg</p>
-                                    <p class="card-text">Packaged: Yes</p>
-                                    <p class="card-text">Pickup Address: 123 Main St, City</p>
+                                    <h5 class="card-title">Organization Name: Example Organization</h5>
+                                    <p class="card-text">Registration Number: 123456789</p>
+                                    <p class="card-text">Tax ID/EIN: 98-7654321</p>
+                                    <p class="card-text">Website URL: <a href="http://example.org">example.org</a></p>
+                                    <p class="card-text">Address Line 1: 456 Another St</p>
+                                    <p class="card-text">Address Line 2: Suite 300</p>
                                 </div>
                                 <div class="col-md-6">
+                                    <p class="card-text">City: Cityville</p>
+                                    <p class="card-text">State: Stateville</p>
+                                    <p class="card-text">Zip Code: 54321</p>
+                                    <p class="card-text">Country: Countryland</p>
                                     <p class="card-text">Latitude: 12.3456</p>
                                     <p class="card-text">Longitude: 78.9012</p>
-                                    <p class="card-text">Contact Person: John Doe</p>
-                                    <p class="card-text">Contact Phone: 123-456-7890</p>
-                                    <p class="card-text">Additional Notes: Please bring containers.</p>
                                 </div>
                             </div>
                             <div class="text-center mt-3">
-                                <button class="btn btn-success btn-accept" onclick="acceptRequest(this)">Accept
-                                    Donation</button>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="card mb-4">
-                        <div class="card-body">
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <h5 class="card-title">Food: Rice</h5>
-                                    <p class="card-text">Quantity: 30 servings</p>
-                                    <p class="card-text">Category: Non-Veg</p>
-                                    <p class="card-text">Packaged: No</p>
-                                    <p class="card-text">Pickup Address: 456 Another St, City</p>
-                                </div>
-                                <div class="col-md-6">
-                                    <p class="card-text">Latitude: 98.7654</p>
-                                    <p class="card-text">Longitude: 54.3210</p>
-                                    <p class="card-text">Contact Person: Jane Smith</p>
-                                    <p class="card-text">Contact Phone: 098-765-4321</p>
-                                    <p class="card-text">Additional Notes: None</p>
-                                </div>
-                            </div>
-                            <div class="text-center mt-3">
-                                <button class="btn btn-success btn-accept" onclick="acceptRequest()">Accept
-                                    Donation</button>
+                                <button class="btn btn-success btn-verify" onclick="verifyOrganization(this)">Verify
+                                    NGO</button>
                             </div>
                         </div>
                     </div>
@@ -157,8 +130,7 @@
                     <div class="ftco-footer-widget mb-4">
                         <h2 class="ftco-heading-2">About Us</h2>
                         <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
-                            there live the
-                            blind texts.</p>
+                            there live the blind texts.</p>
                         <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                             <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
                             <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
@@ -199,11 +171,9 @@
                     <div class="ftco-footer-widget mb-4 ml-md-4">
                         <h2 class="ftco-heading-2">Site Links</h2>
                         <ul class="list-unstyled">
-                            <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
-                            <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-                            <li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
-                            <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
-                            <li class="nav-item"><a href="restaurant_main_2.html" class="nav-link">NGO</a></li>
+                            <li class="nav-item"><a href="admin_Ind.html" class="nav-link">Volunteer</a></li>
+                            <li class="nav-item"><a href="admin_ngo.html" class="nav-link">NGO</a></li>
+                            <li class="nav-item"><a href="admin_restaurant.html" class="nav-link">Restaurant</a></li>
                         </ul>
                     </div>
                 </div>
@@ -227,13 +197,12 @@
             <div class="row">
                 <div class="col-md-12 text-center">
 
-                    <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                    <p>
                         Copyright &copy;
-                        <script>document.write(new Date().getFullYear());</script> All rights reserved | This template
-                        is made with
-                        <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com"
-                            target="_blank">Colorlib</a>
-                        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                        <script>
+                            document.write(new Date().getFullYear());
+                        </script> All rights reserved | This template is made with <i class="icon-heart"
+                            aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
                     </p>
                 </div>
             </div>
@@ -241,17 +210,9 @@
     </footer>
     <!-- Footer End -->
 
-    <!-- loader -->
-    <!-- <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px">
-            <circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" />
-            <circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10"
-                stroke="#F96D00" />
-        </svg></div> -->
-
-    <!-- <script src="js/new_js.js"></script> -->
     <script>
-        function acceptRequest(button) {
-            button.textContent = 'Accepted';
+        function verifyOrganization(button) {
+            button.textContent = 'Verified';
             button.classList.remove('btn-success');
             button.classList.add('btn-secondary');
             button.disabled = true;
