--- a/Frontend/admin_restaurant.html
+++ b/Frontend/admin_restaurant.html
@@ -76,12 +76,9 @@
 
             <div class="collapse navbar-collapse" id="ftco-nav">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-                    <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-                    <li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
-                    <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
-                    <li class="nav-item"><a href="restaurant_main_2.html" class="nav-link">NGO</a></li>
-                    <li class="nav-item"><a href="Login.html" class="nav-link">SignIn</a></li>
+                    <li class="nav-item"><a href="admin_Ind.html" class="nav-link">Volunteer</a></li>
+                    <li class="nav-item"><a href="admin_ngo.html" class="nav-link">NGO</a></li>
+                    <li class="nav-item"><a href="admin_restaurant.html" class="nav-link">Restaurant</a></li>
                 </ul>
             </div>
         </div>
@@ -89,7 +86,7 @@
     <!-- END nav -->
 
     <div class="container" style="margin-top: 6rem">
-        <!-- Donation Request Card 1 -->
+        <!-- Individual Verification Card -->
         <div class="container mt-5">
             <div class="row">
                 <div class="col-md-12">
@@ -97,48 +94,67 @@
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-md-6">
-                                    <h5 class="card-title">Food: Daal</h5>
-                                    <p class="card-text">Quantity: 50 servings</p>
-                                    <p class="card-text">Category: Veg</p>
-                                    <p class="card-text">Packaged: Yes</p>
-                                    <p class="card-text">Pickup Address: 123 Main St, City</p>
+                                    <h5 class="card-title">Username: abc123</h5>
+                                    <p class="card-text">Restaurant Name: Sunshine</p>
+                                    <p class="card-text">Type: Restaurant</p>
+                                    <p class="card-text">Business License Number: 12345</p>
+                                    <p class="card-text">Website URL: cricbuzz.com</p>
+                                    <p class="card-text">Manager Name: Kaleshbhai</p>
+                                    <p class="card-text">Primary Contact Email: abc@gmail.com</p>
+                                    <p class="card-text">Primary Contact Phone: 98767898722</p>
                                 </div>
                                 <div class="col-md-6">
+                                    <p class="card-text">Address Line 1: 123 Main St</p>
+                                    <p class="card-text">Address Line 2: Apt 4B</p>
+                                    <p class="card-text">City: City</p>
+                                    <p class="card-text">State: State</p>
+                                    <p class="card-text">Zip Code: 12345</p>
+                                    <p class="card-text">Country: Country</p>
                                     <p class="card-text">Latitude: 12.3456</p>
                                     <p class="card-text">Longitude: 78.9012</p>
-                                    <p class="card-text">Contact Person: John Doe</p>
-                                    <p class="card-text">Contact Phone: 123-456-7890</p>
-                                    <p class="card-text">Additional Notes: Please bring containers.</p>
                                 </div>
                             </div>
                             <div class="text-center mt-3">
-                                <button class="btn btn-success btn-accept" onclick="acceptRequest(this)">Accept
-                                    Donation</button>
+                                <button class="btn btn-success btn-verify" onclick="verifyRestaurant(this)">Verify
+                                    Restaurant</button>
                             </div>
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
 
+        <!-- Individual Verification Card -->
+        <div class="container mt-2">
+            <div class="row">
+                <div class="col-md-12">
                     <div class="card mb-4">
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-md-6">
-                                    <h5 class="card-title">Food: Rice</h5>
-                                    <p class="card-text">Quantity: 30 servings</p>
-                                    <p class="card-text">Category: Non-Veg</p>
-                                    <p class="card-text">Packaged: No</p>
-                                    <p class="card-text">Pickup Address: 456 Another St, City</p>
+                                    <h5 class="card-title">Username: abc123</h5>
+                                    <p class="card-text">Restaurant Name: Sunshine</p>
+                                    <p class="card-text">Type: Restaurant</p>
+                                    <p class="card-text">Business License Number: 12345</p>
+                                    <p class="card-text">Website URL: cricbuzz.com</p>
+                                    <p class="card-text">Manager Name: Kaleshbhai</p>
+                                    <p class="card-text">Primary Contact Email: abc@gmail.com</p>
+                                    <p class="card-text">Primary Contact Phone: 98767898722</p>
                                 </div>
                                 <div class="col-md-6">
-                                    <p class="card-text">Latitude: 98.7654</p>
-                                    <p class="card-text">Longitude: 54.3210</p>
-                                    <p class="card-text">Contact Person: Jane Smith</p>
-                                    <p class="card-text">Contact Phone: 098-765-4321</p>
-                                    <p class="card-text">Additional Notes: None</p>
+                                    <p class="card-text">Address Line 1: 123 Main St</p>
+                                    <p class="card-text">Address Line 2: Apt 4B</p>
+                                    <p class="card-text">City: City</p>
+                                    <p class="card-text">State: State</p>
+                                    <p class="card-text">Zip Code: 12345</p>
+                                    <p class="card-text">Country: Country</p>
+                                    <p class="card-text">Latitude: 12.3456</p>
+                                    <p class="card-text">Longitude: 78.9012</p>
                                 </div>
                             </div>
                             <div class="text-center mt-3">
-                                <button class="btn btn-success btn-accept" onclick="acceptRequest()">Accept
-                                    Donation</button>
+                                <button class="btn btn-success btn-verify" onclick="verifyRestaurant(this)">Verify
+                                    Restaurant</button>
                             </div>
                         </div>
                     </div>
@@ -199,11 +215,9 @@
                     <div class="ftco-footer-widget mb-4 ml-md-4">
                         <h2 class="ftco-heading-2">Site Links</h2>
                         <ul class="list-unstyled">
-                            <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
-                            <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-                            <li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
-                            <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
-                            <li class="nav-item"><a href="restaurant_main_2.html" class="nav-link">NGO</a></li>
+                            <li class="nav-item"><a href="admin_Ind.html" class="nav-link">Volunteer</a></li>
+                            <li class="nav-item"><a href="admin_ngo.html" class="nav-link">NGO</a></li>
+                            <li class="nav-item"><a href="admin_restaurant.html" class="nav-link">Restaurant</a></li>
                         </ul>
                     </div>
                 </div>
@@ -241,17 +255,9 @@
     </footer>
     <!-- Footer End -->
 
-    <!-- loader -->
-    <!-- <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px">
-            <circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" />
-            <circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10"
-                stroke="#F96D00" />
-        </svg></div> -->
-
-    <!-- <script src="js/new_js.js"></script> -->
     <script>
-        function acceptRequest(button) {
-            button.textContent = 'Accepted';
+        function verifyRestaurant(button) {
+            button.textContent = 'Verified';
             button.classList.remove('btn-success');
             button.classList.add('btn-secondary');
             button.disabled = true;
