--- a/Frontend/Login.html
+++ b/Frontend/Login.html
@@ -75,7 +75,7 @@
                     </select>
                   </div>
                   <div class="form-group">
-                    <label for="email">Email Address / Username</label>
+                    <label for="email" id="_email">Email Address / Username</label>
                     <input type="email" class="form-control" style="border-radius: 5px;" id="email"
                       placeholder="Enter email / username" required>
                   </div>
@@ -198,12 +198,15 @@
     function changeInputType() {
       const userType = document.getElementById('userType').value;
       const emailInput = document.getElementById('email');
+      const email1 = document.getElementById('_email');
       if (userType === 'restaurant' || userType === 'admin') {
         emailInput.setAttribute('type', 'text');
         emailInput.setAttribute('placeholder', 'Enter username');
+        email1.innerText = "Username";
       } else {
         emailInput.setAttribute('type', 'email');
         emailInput.setAttribute('placeholder', 'Enter email');
+        email1.innerText = "Email";
       }
     }
 
