connect user pages

--- a/Frontend/Login.html
+++ b/Frontend/Login.html
@@ -206,7 +206,7 @@
       } else {
         emailInput.setAttribute('type', 'email');
         emailInput.setAttribute('placeholder', 'Enter email');
-        email1.innerText = "Email";
+        email1.innerText = "Email Address";
       }
     }
 
