--- a/Frontend/food_transations_ngo.html
+++ b/Frontend/food_transations_ngo.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Welfare - Free Bootstrap 4 Template by Colorlib</title>
+    <title>Food Donation Requests</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -88,65 +88,84 @@
     </nav>
     <!-- END nav -->
 
-    <div class="container" style="margin-top: 6rem">
-        <!-- Donation Request Card 1 -->
-        <div class="container mt-5">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="card mb-4">
-                        <div class="card-body">
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <h5 class="card-title">Food: Daal</h5>
-                                    <p class="card-text">Quantity: 50 servings</p>
-                                    <p class="card-text">Category: Veg</p>
-                                    <p class="card-text">Packaged: Yes</p>
-                                    <p class="card-text">Pickup Address: 123 Main St, City</p>
-                                </div>
-                                <div class="col-md-6">
-                                    <p class="card-text">Latitude: 12.3456</p>
-                                    <p class="card-text">Longitude: 78.9012</p>
-                                    <p class="card-text">Contact Person: John Doe</p>
-                                    <p class="card-text">Contact Phone: 123-456-7890</p>
-                                    <p class="card-text">Additional Notes: Please bring containers.</p>
-                                </div>
-                            </div>
-                            <div class="text-center mt-3">
-                                <button class="btn btn-success btn-accept" onclick="acceptRequest(this)">Accept
-                                    Donation</button>
-                            </div>
+
+    <div id="foodTransactionsContainer" class="container" style="margin-top: 6rem">
+        <!-- Food transactions will be dynamically inserted here -->
+    </div>
+
+    <script>
+        const BACKEND_URL = "http://localhost:3000";
+
+        async function fetchFoodTransactions() {
+        try {
+            const token = localStorage.getItem('authToken');
+            console.log(token);
+            const response = await fetch(`${BACKEND_URL}/foodtransaction/available`, {
+                headers: {
+                    'Authorization': token
+                }
+            });
+
+            if (!response.ok) {
+                throw new Error('Failed to fetch available food transactions');
+            }
+
+            const data = await response.json();
+            createDonationCards(data);
+        } catch (error) {
+            console.error('Error fetching food transactions:', error);
+        }
+    }
+
+    function createDonationCards(donations) {
+        const container = document.getElementById('foodTransactionsContainer');
+        container.innerHTML = '';
+
+        donations.forEach(donation => {
+            const card = document.createElement('div');
+            card.className = 'card mb-4';
+            card.innerHTML = `
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <h5 class="card-title">Food: ${donation.foodItems.join(', ')}</h5>
+                            <p class="card-text">Quantity: ${donation.quantity}</p>
+                            <p class="card-text">Category: ${donation.foodtype}</p>
+                            <p class="card-text">Packaged: ${donation.packaged ? 'Yes' : 'No'}</p>
+                            <p class="card-text">Pickup Address: ${donation.pickupLocation.address.address_line_1}, ${donation.pickupLocation.address.city}</p>
+                        </div>
+                        <div class="col-md-6">
+                            <p class="card-text">Latitude: ${donation.pickupLocation.geo_location.latitude}</p>
+                            <p class="card-text">Longitude: ${donation.pickupLocation.geo_location.longitude}</p>
+                            <p class="card-text">Contact Person: ${donation.contactPerson.name}</p>
+                            <p class="card-text">Contact Phone: ${donation.contactPerson.phone}</p>
+                            <p class="card-text">Donor: ${donation.donor.name}</p>
+                            <p class="card-text">Additional Notes: ${donation.additionalNotes || 'None'}</p>
                         </div>
                     </div>
-
-                    <div class="card mb-4">
-                        <div class="card-body">
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <h5 class="card-title">Food: Rice</h5>
-                                    <p class="card-text">Quantity: 30 servings</p>
-                                    <p class="card-text">Category: Non-Veg</p>
-                                    <p class="card-text">Packaged: No</p>
-                                    <p class="card-text">Pickup Address: 456 Another St, City</p>
-                                </div>
-                                <div class="col-md-6">
-                                    <p class="card-text">Latitude: 98.7654</p>
-                                    <p class="card-text">Longitude: 54.3210</p>
-                                    <p class="card-text">Contact Person: Jane Smith</p>
-                                    <p class="card-text">Contact Phone: 098-765-4321</p>
-                                    <p class="card-text">Additional Notes: None</p>
-                                </div>
-                            </div>
-                            <div class="text-center mt-3">
-                                <button class="btn btn-success btn-accept" onclick="acceptRequest()">Accept
-                                    Donation</button>
-                            </div>
-                        </div>
+                    <div class="text-center mt-3">
+                        <button class="btn btn-success btn-accept" onclick="acceptRequest(this, '${donation._id}')">Accept Donation</button>
                     </div>
                 </div>
-            </div>
-        </div>
+            `;
+            container.appendChild(card);
+        });
+    }
 
-    </div>
+    // Function to handle accepting a donation request
+    function acceptRequest(button, transactionId) {
+        console.log(`Donation with ID ${transactionId} accepted.`);
+        button.textContent = 'Accepted';
+        button.disabled = true;
+        // Implement further actions as needed
+    }
+
+    document.addEventListener('DOMContentLoaded', fetchFoodTransactions);
+
+    // Call fetchFoodTransactions when the page loads
+    window.onload = fetchFoodTransactions;
+    
+    </script>
 
     <!-- Footer Start -->
     <footer class="ftco-footer ftco-section img">
