--- a/Frontend/ngo_register.html
+++ b/Frontend/ngo_register.html
@@ -427,8 +427,8 @@
         });
 
     </script>
-
-    <script src="js/new_js.js"></script>
+<!-- This below file new_js.js is for maunal script of geolocation. -->
+    <script src="js/new_js.js"></script> 
     <script src="js/jquery.min.js"></script>
     <script src="js/jquery-migrate-3.0.1.min.js"></script>
     <script src="js/popper.min.js"></script>
