--- a/Frontend/about_restaurant.html
+++ b/Frontend/about_restaurant.html
@@ -41,12 +41,13 @@
 
       <div class="collapse navbar-collapse" id="ftco-nav">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-          <li class="nav-item active"><a href="about.html" class="nav-link">About</a></li>
-          <li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
-          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
-          <li class="nav-item"><a href="restaurant_main_2.html" class="nav-link">NGO</a></li>
-          <li class="nav-item"><a href="Login.html" class="nav-link">SignIn</a></li>
+          <li class="nav-item"><a href="index_restaurant.html" class="nav-link">Home</a></li>
+          <li class="nav-item active"><a href="about_restaurant.html" class="nav-link">About</a></li>
+          <li class="nav-item"><a href="gallery_restaurant.html" class="nav-link">Gallery</a></li>
+          <li class="nav-item"><a href="contact_restaurant.html" class="nav-link">Contact</a></li>
+          <li class="nav-item"><a href="ngolist_restaurant.html" class="nav-link">NGO</a></li>
+          <li class="nav-item"><a href="restaurant_donate.html" class="nav-link">Donate</a></li>
+          <li class="nav-item"><a href="index.html" class="nav-link">Logout</a></li>
         </ul>
       </div>
     </div>
@@ -76,15 +77,15 @@
         </div>
         <div class="col-md-6 pl-md-5 ftco-animate">
           <h2 class="mb-4">Welcome to our Welfare Organization</h2>
-          <p>At our Welfare Organization, we are committed to fighting food waste and hunger by creating a seamless 
-            connection between surplus food providers and NGOs. Our innovative platform bridges the gap between 
-            restaurants, community halls, and volunteers, ensuring that excess food reaches those in need rather 
-            than ending up in landfills. By fostering collaboration and community engagement, we aim to create a 
+          <p>At our Welfare Organization, we are committed to fighting food waste and hunger by creating a seamless
+            connection between surplus food providers and NGOs. Our innovative platform bridges the gap between
+            restaurants, community halls, and volunteers, ensuring that excess food reaches those in need rather
+            than ending up in landfills. By fostering collaboration and community engagement, we aim to create a
             sustainable system that benefits everyone involved.</p>
-          <p>Our mission is to reduce food waste, support local communities, and provide safe, nutritious meals to 
-            vulnerable populations. We believe in the power of technology and collective effort to drive meaningful 
-            change. Through our platform, we offer real-time notifications, geolocation services, and a community 
-            forum to share strategies on reducing food waste. Join us in our mission to make a tangible difference, 
+          <p>Our mission is to reduce food waste, support local communities, and provide safe, nutritious meals to
+            vulnerable populations. We believe in the power of technology and collective effort to drive meaningful
+            change. Through our platform, we offer real-time notifications, geolocation services, and a community
+            forum to share strategies on reducing food waste. Join us in our mission to make a tangible difference,
             one meal at a time. Together, we can build a more sustainable and compassionate world.</p>
         </div>
       </div>
@@ -173,11 +174,13 @@
           <div class="ftco-footer-widget mb-4 ml-md-4">
             <h2 class="ftco-heading-2">Site Links</h2>
             <ul class="list-unstyled">
-              <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
-              <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-              <li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
-              <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
-              <li class="nav-item"><a href="restaurant_main_2.html" class="nav-link">NGO</a></li>
+              <li class="nav-item active"><a href="index_restaurant.html" class="nav-link">Home</a></li>
+              <li class="nav-item"><a href="about_restaurant.html" class="nav-link">About</a></li>
+              <li class="nav-item"><a href="gallery_restaurant.html" class="nav-link">Gallery</a></li>
+              <li class="nav-item"><a href="contact_restaurant.html" class="nav-link">Contact</a></li>
+              <li class="nav-item"><a href="ngolist_restaurant.html" class="nav-link">NGO</a></li>
+              <li class="nav-item"><a href="restaurant_donate.html" class="nav-link">Donate</a></li>
+              <li class="nav-item"><a href="index.html" class="nav-link">Logout</a></li>
             </ul>
           </div>
         </div>
