--- a/Frontend/contact_ngo.html
+++ b/Frontend/contact_ngo.html
@@ -41,12 +41,15 @@
 
       <div class="collapse navbar-collapse" id="ftco-nav">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-          <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-          <li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
-          <li class="nav-item active"><a href="contact.html" class="nav-link">Contact</a></li>
-          <li class="nav-item"><a href="restaurant_main_2.html" class="nav-link">NGO</a></li>
-          <li class="nav-item"><a href="Login.html" class="nav-link">SignIn</a></li>
+          <li class="nav-item"><a href="index_ngo.html" class="nav-link">Home</a></li>
+          <li class="nav-item"><a href="about_ngo.html" class="nav-link">About</a></li>
+          <li class="nav-item"><a href="gallery_ngo.html" class="nav-link">Gallery</a></li>
+          <li class="nav-item active"><a href="contact_ngo.html" class="nav-link">Contact</a></li>
+          <li class="nav-item"><a href="ngolist_ngo.html" class="nav-link">NGO</a></li>
+          <li class="nav-item"><a href="food_transations_ngo.html" class="nav-link">Donations</a></li>
+          <li class="nav-item"><a href="accepted_donations_ngo.html" class="nav-link">Accepted Donations</a></li>
+          <li class="nav-item"><a href="donations_history_ngo.html" class="nav-link">Donations History</a></li>
+          <li class="nav-item"><a href="index.html" class="nav-link">Logout</a></li>
         </ul>
       </div>
     </div>
@@ -162,11 +165,15 @@
           <div class="ftco-footer-widget mb-4 ml-md-4">
             <h2 class="ftco-heading-2">Site Links</h2>
             <ul class="list-unstyled">
-              <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-              <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-              <li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
-              <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
-              <li class="nav-item"><a href="restaurant_main_2.html" class="nav-link">NGO</a></li>
+              <li class="nav-item"><a href="index_ngo.html" class="nav-link">Home</a></li>
+              <li class="nav-item active"><a href="about_ngo.html" class="nav-link">About</a></li>
+              <li class="nav-item"><a href="gallery_ngo.html" class="nav-link">Gallery</a></li>
+              <li class="nav-item"><a href="contact_ngo.html" class="nav-link">Contact</a></li>
+              <li class="nav-item"><a href="ngolist_ngo.html" class="nav-link">NGO</a></li>
+              <li class="nav-item"><a href="food_transations_ngo.html" class="nav-link">Donations</a></li>
+              <li class="nav-item"><a href="accepted_donations_ngo.html" class="nav-link">Accepted Donations</a></li>
+              <li class="nav-item"><a href="donations_history_ngo.html" class="nav-link">Donations History</a></li>
+              <li class="nav-item"><a href="index.html" class="nav-link">Logout</a></li>
             </ul>
           </div>
         </div>
