--- a/Frontend/contact_restaurant.html
+++ b/Frontend/contact_restaurant.html
@@ -41,12 +41,13 @@
 
       <div class="collapse navbar-collapse" id="ftco-nav">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-          <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-          <li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
-          <li class="nav-item active"><a href="contact.html" class="nav-link">Contact</a></li>
-          <li class="nav-item"><a href="restaurant_main_2.html" class="nav-link">NGO</a></li>
-          <li class="nav-item"><a href="Login.html" class="nav-link">SignIn</a></li>
+          <li class="nav-item"><a href="index_restaurant.html" class="nav-link">Home</a></li>
+          <li class="nav-item"><a href="about_restaurant.html" class="nav-link">About</a></li>
+          <li class="nav-item"><a href="gallery_restaurant.html" class="nav-link">Gallery</a></li>
+          <li class="nav-item active"><a href="contact_restaurant.html" class="nav-link">Contact</a></li>
+          <li class="nav-item"><a href="ngolist_restaurant.html" class="nav-link">NGO</a></li>
+          <li class="nav-item"><a href="restaurant_donate.html" class="nav-link">Donate</a></li>
+          <li class="nav-item"><a href="index.html" class="nav-link">Logout</a></li>
         </ul>
       </div>
     </div>
@@ -162,11 +163,13 @@
           <div class="ftco-footer-widget mb-4 ml-md-4">
             <h2 class="ftco-heading-2">Site Links</h2>
             <ul class="list-unstyled">
-              <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-              <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-              <li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
-              <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
-              <li class="nav-item"><a href="restaurant_main_2.html" class="nav-link">NGO</a></li>
+              <li class="nav-item active"><a href="index_restaurant.html" class="nav-link">Home</a></li>
+              <li class="nav-item"><a href="about_restaurant.html" class="nav-link">About</a></li>
+              <li class="nav-item"><a href="gallery_restaurant.html" class="nav-link">Gallery</a></li>
+              <li class="nav-item"><a href="contact_restaurant.html" class="nav-link">Contact</a></li>
+              <li class="nav-item"><a href="ngolist_restaurant.html" class="nav-link">NGO</a></li>
+              <li class="nav-item"><a href="restaurant_donate.html" class="nav-link">Donate</a></li>
+              <li class="nav-item"><a href="index.html" class="nav-link">Logout</a></li>
             </ul>
           </div>
         </div>
