--- a/Frontend/gallery_Ind.html
+++ b/Frontend/gallery_Ind.html
@@ -41,12 +41,12 @@
 
       <div class="collapse navbar-collapse" id="ftco-nav">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-          <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-          <li class="nav-item active"><a href="gallery.html" class="nav-link">Gallery</a></li>
-          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
-          <li class="nav-item"><a href="restaurant_main_2.html" class="nav-link">NGO</a></li>
-          <li class="nav-item"><a href="Login.html" class="nav-link">SignIn</a></li>
+          <li class="nav-item"><a href="index_Ind.html" class="nav-link">Home</a></li>
+          <li class="nav-item"><a href="about_Ind.html" class="nav-link">About</a></li>
+          <li class="nav-item active"><a href="gallery_Ind.html" class="nav-link">Gallery</a></li>
+          <li class="nav-item"><a href="contact_Ind.html" class="nav-link">Contact</a></li>
+          <li class="nav-item"><a href="ngolist_Ind.html" class="nav-link">NGO</a></li>
+          <li class="nav-item"><a href="index.html" class="nav-link">Logout</a></li>
         </ul>
       </div>
   </nav>
@@ -235,11 +235,12 @@
           <div class="ftco-footer-widget mb-4 ml-md-4">
             <h2 class="ftco-heading-2">Site Links</h2>
             <ul class="list-unstyled">
-              <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
-              <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-              <li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
-              <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
-              <li class="nav-item"><a href="restaurant_main_2.html" class="nav-link">NGO</a></li>
+              <li class="nav-item"><a href="index_Ind.html" class="nav-link">Home</a></li>
+              <li class="nav-item"><a href="about_Ind.html" class="nav-link">About</a></li>
+              <li class="nav-item"><a href="gallery_Ind.html" class="nav-link">Gallery</a></li>
+              <li class="nav-item"><a href="contact_Ind.html" class="nav-link">Contact</a></li>
+              <li class="nav-item"><a href="ngolist_Ind.html" class="nav-link">NGO</a></li>
+              <li class="nav-item"><a href="index.html" class="nav-link">Logout</a></li>
             </ul>
           </div>
         </div>
