--- a/Frontend/restaurant_donate.html
+++ b/Frontend/restaurant_donate.html
@@ -48,12 +48,13 @@
 
             <div class="collapse navbar-collapse" id="ftco-nav">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-                    <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-                    <li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
-                    <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
-                    <li class="nav-item"><a href="restaurant_main_2.html" class="nav-link">NGO</a></li>
-                    <li class="nav-item"><a href="Login.html" class="nav-link">SignIn</a></li>
+                    <li class="nav-item"><a href="index_restaurant.html" class="nav-link">Home</a></li>
+                    <li class="nav-item"><a href="about_restaurant.html" class="nav-link">About</a></li>
+                    <li class="nav-item"><a href="gallery_restaurant.html" class="nav-link">Gallery</a></li>
+                    <li class="nav-item"><a href="contact_restaurant.html" class="nav-link">Contact</a></li>
+                    <li class="nav-item"><a href="ngolist_restaurant.html" class="nav-link">NGO</a></li>
+                    <li class="nav-item active"><a href="restaurant_donate.html" class="nav-link">Donate</a></li>
+                    <li class="nav-item"><a href="index.html" class="nav-link">Logout</a></li>
                 </ul>
             </div>
         </div>
@@ -131,8 +132,9 @@
                             </div>
                             <div class="form-group">
                                 <label for="photos">Photos (Maximum 5)</label>
-                                <input type="file" class="form-control" style="border-radius: 5px; padding-top: 0.75rem;" id="photos"
-                                    name="photos" accept="image/*" multiple required>
+                                <input type="file" class="form-control"
+                                    style="border-radius: 5px; padding-top: 0.75rem;" id="photos" name="photos"
+                                    accept="image/*" multiple required>
                                 <p id="photo-error" style="color: red; display: none;">You can only upload a maximum of
                                     5 photos.</p>
                             </div>
@@ -202,11 +204,13 @@
                     <div class="ftco-footer-widget mb-4 ml-md-4">
                         <h2 class="ftco-heading-2">Site Links</h2>
                         <ul class="list-unstyled">
-                            <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
-                            <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-                            <li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
-                            <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
-                            <li class="nav-item"><a href="restaurant_main_2.html" class="nav-link">NGO</a></li>
+                            <li class="nav-item"><a href="index_restaurant.html" class="nav-link">Home</a></li>
+                            <li class="nav-item"><a href="about_restaurant.html" class="nav-link">About</a></li>
+                            <li class="nav-item"><a href="gallery_restaurant.html" class="nav-link">Gallery</a></li>
+                            <li class="nav-item"><a href="contact_restaurant.html" class="nav-link">Contact</a></li>
+                            <li class="nav-item"><a href="ngolist_restaurant.html" class="nav-link">NGO</a></li>
+                            <li class="nav-item"><a href="restaurant_donate.html" class="nav-link">Donate</a></li>
+                            <li class="nav-item"><a href="index.html" class="nav-link">Logout</a></li>
                         </ul>
                     </div>
                 </div>
