Accept donation and history of donation

--- a/Frontend/donations_history_ngo.html
+++ b/Frontend/donations_history_ngo.html
@@ -93,9 +93,9 @@
                     <li class="nav-item"><a href="contact_ngo.html" class="nav-link">Contact</a></li>
                     <li class="nav-item"><a href="ngolist_ngo.html" class="nav-link">NGO</a></li>
                     <li class="nav-item"><a href="food_transations_ngo.html" class="nav-link">Donations</a></li>
-                    <li class="nav-item active"><a href="accepted_donations_ngo.html" class="nav-link">Accepted Donations</a>
+                    <li class="nav-item"><a href="accepted_donations_ngo.html" class="nav-link">Accepted Donations</a>
                     </li>
-                    <li class="nav-item"><a href="donations_history_ngo.html" class="nav-link">Donations History</a>
+                    <li class="nav-item active"><a href="donations_history_ngo.html" class="nav-link">History</a>
                     </li>
                     <li class="nav-item"><a href="index.html" class="nav-link">Logout</a></li>
                 </ul>
@@ -126,7 +126,6 @@
                         </div>
                     </div>
                     <div class="text-center mt-3">
-                        <button class="btn btn-success btn-accept">Accept Donation</button>
                         <button class="btn btn-primary btn-view-photos ml-2">View Photos</button>
                     </div>
                 </div>
