--- a/Frontend/index_Ind.html
+++ b/Frontend/index_Ind.html
@@ -384,7 +384,7 @@
         stroke="#F96D00" />
     </svg></div>
 
-  <script src="js/new_js.js"></script>
+  <script src="js/ngo_cards.js"></script>
   <script src="js/jquery.min.js"></script>
   <script src="js/jquery-migrate-3.0.1.min.js"></script>
   <script src="js/popper.min.js"></script>
