--- a/Frontend/restaurant_donate.html
+++ b/Frontend/restaurant_donate.html
@@ -449,6 +449,6 @@
         </div>
     </footer>
 
-    <script src="js/new_js.js"></script>
+    <script src="js/ngo_cards.js"></script>
   </body>
 </html>
