--- a/Frontend/restaurant_register.html
+++ b/Frontend/restaurant_register.html
@@ -356,7 +356,7 @@
         });
     </script>
 
-    <script src="js/new_js.js"></script>
+    <script src="js/ngo_cards.js"></script>
 </body>
 
 </html>
