--- a/Frontend/about_restaurant.html
+++ b/Frontend/about_restaurant.html
@@ -47,7 +47,9 @@
           <li class="nav-item"><a href="contact_restaurant.html" class="nav-link">Contact</a></li>
           <li class="nav-item"><a href="ngolist_restaurant.html" class="nav-link">NGO</a></li>
           <li class="nav-item"><a href="restaurant_donate.html" class="nav-link">Donate</a></li>
-          <li class="nav-item"><a href="index.html" class="nav-link">Logout</a></li>
+          <li class="nav-item">
+            <a href="index.html" class="nav-link" id="logoutLink">Logout</a>
+          </li>
         </ul>
       </div>
     </div>
@@ -180,7 +182,9 @@
               <li class="nav-item"><a href="contact_restaurant.html" class="nav-link">Contact</a></li>
               <li class="nav-item"><a href="ngolist_restaurant.html" class="nav-link">NGO</a></li>
               <li class="nav-item"><a href="restaurant_donate.html" class="nav-link">Donate</a></li>
-              <li class="nav-item"><a href="index.html" class="nav-link">Logout</a></li>
+              <li class="nav-item">
+                <a href="index.html" class="nav-link" id="logoutLink">Logout</a>
+              </li>
             </ul>
           </div>
         </div>
@@ -222,7 +226,15 @@
         stroke="#F96D00" />
     </svg></div>
 
-
+  <script>
+    document.getElementById('logoutLink').addEventListener('click', function (event) {
+      event.preventDefault(); // Prevent the default link action
+      var confirmation = confirm('Are you sure you want to logout?');
+      if (confirmation) {
+        window.location.href = 'index.html'; // Redirect to the logout page
+      }
+    });
+  </script>
   <script src="js/jquery.min.js"></script>
   <script src="js/jquery-migrate-3.0.1.min.js"></script>
   <script src="js/popper.min.js"></script>
