--- a/Frontend/admin_restaurant.html
+++ b/Frontend/admin_restaurant.html
@@ -79,6 +79,9 @@
                     <li class="nav-item"><a href="admin_Ind.html" class="nav-link">Volunteer</a></li>
                     <li class="nav-item"><a href="admin_ngo.html" class="nav-link">NGO</a></li>
                     <li class="nav-item"><a href="admin_restaurant.html" class="nav-link">Restaurant</a></li>
+                    <li class="nav-item">
+                        <a href="index.html" class="nav-link" id="logoutLink">Logout</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -218,6 +221,9 @@
                             <li class="nav-item"><a href="admin_Ind.html" class="nav-link">Volunteer</a></li>
                             <li class="nav-item"><a href="admin_ngo.html" class="nav-link">NGO</a></li>
                             <li class="nav-item"><a href="admin_restaurant.html" class="nav-link">Restaurant</a></li>
+                            <li class="nav-item">
+                                <a href="index.html" class="nav-link" id="logoutLink">Logout</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -262,6 +268,15 @@
             button.classList.add('btn-secondary');
             button.disabled = true;
         }
+    </script>
+    <script>
+        document.getElementById('logoutLink').addEventListener('click', function (event) {
+            event.preventDefault(); // Prevent the default link action
+            var confirmation = confirm('Are you sure you want to logout?');
+            if (confirmation) {
+                window.location.href = 'index.html'; // Redirect to the logout page
+            }
+        });
     </script>
 </body>
 
