--- a/Frontend/donations_history_ngo.html
+++ b/Frontend/donations_history_ngo.html
@@ -97,7 +97,9 @@
                     </li>
                     <li class="nav-item active"><a href="donations_history_ngo.html" class="nav-link">History</a>
                     </li>
-                    <li class="nav-item"><a href="index.html" class="nav-link">Logout</a></li>
+                    <li class="nav-item">
+                        <a href="index.html" class="nav-link" id="logoutLink">Logout</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -109,7 +111,8 @@
     </div>
 
     <!-- Photo Modal -->
-    <div class="modal fade" id="photoModal" tabindex="-1" role="dialog" aria-labelledby="photoModalLabel" aria-hidden="true">
+    <div class="modal fade" id="photoModal" tabindex="-1" role="dialog" aria-labelledby="photoModalLabel"
+        aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
             <div class="modal-content" style="align-items: center;">
                 <div class="modal-header">
@@ -142,7 +145,7 @@
             try {
                 const token = localStorage.getItem('authToken');
                 const response = await fetch(`${BACKEND_URL}/foodtransaction/foodlogs`, {
-                    method : "GET",
+                    method: "GET",
                     headers: {
                         'Authorization': token
                     }
@@ -298,7 +301,9 @@
                             <li class="nav-item"><a href="donations_history_ngo.html" class="nav-link">Donations
                                     History</a>
                             </li>
-                            <li class="nav-item"><a href="index.html" class="nav-link">Logout</a></li>
+                            <li class="nav-item">
+                                <a href="index.html" class="nav-link" id="logoutLink">Logout</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -336,6 +341,15 @@
     </footer>
     <!-- Footer End -->
 
+    <script>
+        document.getElementById('logoutLink').addEventListener('click', function (event) {
+            event.preventDefault(); // Prevent the default link action
+            var confirmation = confirm('Are you sure you want to logout?');
+            if (confirmation) {
+                window.location.href = 'index.html'; // Redirect to the logout page
+            }
+        });
+    </script>
     <script src="js/jquery.min.js"></script>
     <script src="js/jquery-migrate-3.0.1.min.js"></script>
     <script src="js/popper.min.js"></script>
