--- a/Frontend/food_transations_ngo.html
+++ b/Frontend/food_transations_ngo.html
@@ -86,7 +86,9 @@
                     </li>
                     <li class="nav-item"><a href="donations_history_ngo.html" class="nav-link">Donations History</a>
                     </li>
-                    <li class="nav-item"><a href="index.html" class="nav-link">Logout</a></li>
+                    <li class="nav-item">
+                        <a href="index.html" class="nav-link" id="logoutLink">Logout</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -157,33 +159,33 @@
             });
         }
 
-    async function acceptRequest(button ,transactionId) {
-        try {
-            const token = localStorage.getItem('authToken');
-            const response = await fetch(`${BACKEND_URL}/foodtransaction/claimstatusupdate`, {
-                method: 'PATCH',
-                headers: {
-                    'Content-Type': 'application/json',
-                    'Authorization': token
-                },
-                body: JSON.stringify({ transactionId })
-            });
+        async function acceptRequest(button, transactionId) {
+            try {
+                const token = localStorage.getItem('authToken');
+                const response = await fetch(`${BACKEND_URL}/foodtransaction/claimstatusupdate`, {
+                    method: 'PATCH',
+                    headers: {
+                        'Content-Type': 'application/json',
+                        'Authorization': token
+                    },
+                    body: JSON.stringify({ transactionId })
+                });
 
-            if (!response.ok) {
-                throw new Error('Failed to claim the food transaction');
+                if (!response.ok) {
+                    throw new Error('Failed to claim the food transaction');
+                }
+
+                const data = await response.json();
+                console.log(`Donation with ID ${transactionId} accepted:`, data);
+
+                button.textContent = 'Accepted';
+                button.disabled = true;
+                button.classList.remove('btn-success');
+                button.classList.add('btn-secondary');
+            } catch (error) {
+                console.error('Error claiming food transaction:', error);
             }
-
-            const data = await response.json();
-            console.log(`Donation with ID ${transactionId} accepted:`, data);
-
-            button.textContent = 'Accepted';
-            button.disabled = true;
-            button.classList.remove('btn-success');
-            button.classList.add('btn-secondary');
-        } catch (error) {
-            console.error('Error claiming food transaction:', error);
         }
-    }
 
         document.addEventListener('DOMContentLoaded', fetchFoodTransactions);
 
@@ -253,7 +255,9 @@
                                     Donations</a></li>
                             <li class="nav-item"><a href="donations_history_ngo.html" class="nav-link">Donations
                                     History</a></li>
-                            <li class="nav-item"><a href="index.html" class="nav-link">Logout</a></li>
+                            <li class="nav-item">
+                                <a href="index.html" class="nav-link" id="logoutLink">Logout</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -297,7 +301,15 @@
             <circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10"
                 stroke="#F96D00" />
         </svg></div> -->
-
+    <script>
+        document.getElementById('logoutLink').addEventListener('click', function (event) {
+            event.preventDefault(); // Prevent the default link action
+            var confirmation = confirm('Are you sure you want to logout?');
+            if (confirmation) {
+                window.location.href = 'index.html'; // Redirect to the logout page
+            }
+        });
+    </script>
 </body>
 
 </html>
