--- a/Frontend/index_Ind.html
+++ b/Frontend/index_Ind.html
@@ -46,7 +46,9 @@
           <li class="nav-item"><a href="gallery_Ind.html" class="nav-link">Gallery</a></li>
           <li class="nav-item"><a href="contact_Ind.html" class="nav-link">Contact</a></li>
           <li class="nav-item"><a href="ngolist_Ind.html" class="nav-link">NGO</a></li>
-          <li class="nav-item"><a href="index.html" class="nav-link">Logout</a></li>
+          <li class="nav-item">
+            <a href="index.html" class="nav-link" id="logoutLink">Logout</a>
+          </li>
         </ul>
       </div>
     </div>
@@ -342,7 +344,9 @@
               <li class="nav-item"><a href="gallery_Ind.html" class="nav-link">Gallery</a></li>
               <li class="nav-item"><a href="contact_Ind.html" class="nav-link">Contact</a></li>
               <li class="nav-item"><a href="ngolist_Ind.html" class="nav-link">NGO</a></li>
-              <li class="nav-item"><a href="index.html" class="nav-link">Logout</a></li>
+              <li class="nav-item">
+                <a href="index.html" class="nav-link" id="logoutLink">Logout</a>
+              </li>
             </ul>
           </div>
         </div>
@@ -384,6 +388,15 @@
         stroke="#F96D00" />
     </svg></div>
 
+  <script>
+    document.getElementById('logoutLink').addEventListener('click', function (event) {
+      event.preventDefault(); // Prevent the default link action
+      var confirmation = confirm('Are you sure you want to logout?');
+      if (confirmation) {
+        window.location.href = 'index.html'; // Redirect to the logout page
+      }
+    });
+  </script>
   <script src="js/ngo_cards.js"></script>
   <script src="js/jquery.min.js"></script>
   <script src="js/jquery-migrate-3.0.1.min.js"></script>
