--- a/Frontend/ngolist_ngo.html
+++ b/Frontend/ngolist_ngo.html
@@ -57,7 +57,9 @@
                     </li>
                     <li class="nav-item"><a href="donations_history_ngo.html" class="nav-link">Donations History</a>
                     </li>
-                    <li class="nav-item"><a href="index.html" class="nav-link">Logout</a></li>
+                    <li class="nav-item">
+                        <a href="index.html" class="nav-link" id="logoutLink">Logout</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -67,8 +69,10 @@
     <!-- Search Bar -->
     <div class="container my-4" style="padding-top: 5rem">
         <div class="input-group">
-            <input type="text" id="searchInput" class="form-control" placeholder="Search for NGOs..." style="border-radius: 5px;">
-            <button id="clearButton" class="btn btn-secondary" type="button" style="border-radius: 5px; margin-left: 10px;">Clear</button>
+            <input type="text" id="searchInput" class="form-control" placeholder="Search for NGOs..."
+                style="border-radius: 5px;">
+            <button id="clearButton" class="btn btn-secondary" type="button"
+                style="border-radius: 5px; margin-left: 10px;">Clear</button>
         </div>
     </div>
 
@@ -77,7 +81,7 @@
             <!-- NGO cards will be appended here dynamically -->
         </div>
     </div>
-    
+
     <footer class="ftco-footer ftco-section img">
         <div class="overlay"></div>
         <div class="container">
@@ -137,7 +141,9 @@
                                     Donations</a></li>
                             <li class="nav-item"><a href="donations_history_ngo.html" class="nav-link">Donations
                                     History</a></li>
-                            <li class="nav-item"><a href="index.html" class="nav-link">Logout</a></li>
+                            <li class="nav-item">
+                                <a href="index.html" class="nav-link" id="logoutLink">Logout</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -182,6 +188,15 @@
         </svg></div>
 
 
+    <script>
+        document.getElementById('logoutLink').addEventListener('click', function (event) {
+            event.preventDefault(); // Prevent the default link action
+            var confirmation = confirm('Are you sure you want to logout?');
+            if (confirmation) {
+                window.location.href = 'index.html'; // Redirect to the logout page
+            }
+        });
+    </script>
     <script src="js/ngo_cards.js"></script>
     <script src="js/jquery.min.js"></script>
     <script src="js/jquery-migrate-3.0.1.min.js"></script>
